# jupyterlab-myst-console

./: .gitignore  .npmignore  LICENSE  MANIFEST.in  README.md  eslint.config.mjs  install.json  package-lock.json  package.json  pyproject.toml  tsconfig.json
.github/workflows/: build.yml  ci.yml  publish-dev.yml  publish.yml
examples/: demo.md
jupyterlab_myst_console/: __init__.py
schema/: plugin.json
src/: icons.ts  index.ts  svg.d.ts  tokens.ts
src/console/: index.ts  manager.ts
src/gutterRunner/: detector.ts  index.ts  plugin.ts  state.ts
src/language/: highlight.ts  index.ts  myst-parser.ts
src/plugins/: consoleRunnerPlugin.ts  fileTypePlugin.ts  gutterPlugin.ts  languagePlugin.ts  launcherPlugin.ts
style/: base.css  index.js
